--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@arco-design/web-vue": "^2.34.1",
     "@types/mockjs": "^1.0.4",
     "@vueuse/core": "^7.3.0",
-    "@wangeditor/editor": "^5.1.21",
-    "@wangeditor/editor-for-vue": "^1.0.2",
+    "@wangeditor/editor": "^5.1.18",
+    "@wangeditor/editor-for-vue": "next",
     "axios": "^0.24.0",
     "dayjs": "^1.11.5",
     "echarts": "^5.2.2",
